# task_planner

./: .gitignore  README.md  pyproject.toml
djangoProject/: settings.py  urls.py
tasks/: apps.py  forms.py  models.py  signals.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_alter_task_task.py  0003_alter_task_notification_interval.py  0004_rename_telegram_nick_task_email.py
tasks/templates/tasks/: base.html  home.html  login.html  register.html  task_confirm_delete.html  task_form.html  task_list.html
